--- a/frontend/civica-card-reload-wc/src/app/afcc-reloader/afcc-reloader.component.html
+++ b/frontend/civica-card-reload-wc/src/app/afcc-reloader/afcc-reloader.component.html
@@ -2,9 +2,15 @@
   <mat-card-header >
     <div *ngIf="!(showBackButton() | async)" mat-card-avatar>
       <svg-icon
+        *ngIf="(operabilityState$ | async).valueOf() !== 'UNKNOWN_POSITION'"
         src="assets/civica-card-reload-pos/{{getHeaderIcon$() | async}}"
         [svgStyle]="{ width: 40, height: 40, fill: getHeaderIconColor$() | async }"
       ></svg-icon>
+      <svg-icon
+      *ngIf="(operabilityState$ | async).valueOf() === 'UNKNOWN_POSITION'"
+      src="assets/civica-card-reload-pos/unknown_position.svg"
+      [svgStyle]="{ width: 40, height: 40, fill: '#F44336' }"
+    ></svg-icon>
     </div>
     <button
       *ngIf="(showBackButton() | async)"
@@ -68,6 +74,9 @@
               'REQUESTING_RELOAD_PERMISSION'
           "
         ></app-read-card>
+        <bluetooth-not-available
+          *ngIf="(operabilityState$ | async).valueOf() === 'BLUETOOTH_NOT_AVAILABLE'"
+        ></bluetooth-not-available>
         <app-internal-error
           *ngIf="(operabilityState$ | async).valueOf() === 'INTERNAL_ERROR'"
         ></app-internal-error>
