--- a/frontend/emi/civica-card-reload-pos/reloader-wc/afcc-reloader/read-card/read-card.component.html
+++ b/frontend/emi/civica-card-reload-pos/reloader-wc/afcc-reloader/read-card/read-card.component.html
@@ -6,7 +6,7 @@
     <mat-form-field class="example-full-width">
       <input matInput name="balance" [(ngModel)]="balance" currencyMask [options]="{ prefix: '$ ', thousands: '.', precision: '0' }" placeholder="Saldo" >
     </mat-form-field>
-    <mat-form-field class="example-full-width">
+    <mat-form-field *ngIf="false" class="example-full-width">
       <input matInput [(ngModel)]="state" placeholder="Estado">
     </mat-form-field>
     <mat-form-field *ngIf="operationState === 'CARD_READED'" class="example-full-width">
